Renamed Baul to Baum.

--- a/BaumSweetSequenceTests/BaumSweetSequenceTests.csproj
+++ b/BaumSweetSequenceTests/BaumSweetSequenceTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1B4B82B6-FA51-45F1-8D9E-1EB48A4EA09B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BaulSweetSequenceTests</RootNamespace>
-    <AssemblyName>BaulSweetSequenceTests</AssemblyName>
+    <RootNamespace>BaumSweetSequenceTests</RootNamespace>
+    <AssemblyName>BaumSweetSequenceTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
