--- a/BaumSweetSequenceTests/BaumSweetSequenceTests.csproj
+++ b/BaumSweetSequenceTests/BaumSweetSequenceTests.csproj
@@ -66,6 +66,12 @@
   <ItemGroup>
     <Content Include="ChallengeInfo.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BaumSweetSequence\BaumSweetSequence.csproj">
+      <Project>{CA13DA3D-43D8-4516-9725-7B11CB421363}</Project>
+      <Name>BaumSweetSequence</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
